--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
     </div>
    <div class="form-group">
       <label for="disabledTextInput">密码</label>
-      <input type="text" id="disabledTextInput" class="form-control" name="passwd" >
+      <input type="password" id="disabledTextInput" class="form-control" name="passwd" >
        <button type="button"  id="saveUserInfo" class="btn btn-primary pull-right">登录</button>
 
 
