--- a/templates/home.html
+++ b/templates/home.html
@@ -10,63 +10,51 @@
 </div>
 <div class="container">
 
-
-    <div class="row">
-        <div style="width: 292.5px; margin-right: 10px;" class="col-md-2">
-
-            <h4>第一列</h4>
-            <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
-    height: 172px;
-    margin-top: 41px;">
-            <p>
-                price  100
-            </p>
-
-        </div>
-        <div style="width: 292.5px; margin-right: 10px;" class="col-md-2">
-
-            <h4>第一列</h4>
-            <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
+  <div class="row" id="list_goods">
+  <div class="col-xs-6 col-sm-3"><img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
     height: 172px;
     margin-top: 41px;">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </p>
+            </p></div>
+  <div class="col-xs-6 col-sm-3"><img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
+    height: 172px;
+    margin-top: 41px;">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p></div>
 
-        </div>
+  <!-- Add the extra clearfix for only the required viewport -->
+  <div class="clearfix visible-xs-block"></div>
 
-        <div class="col-md-9" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-            <h4>第二列 - 分为四个盒子</h4>
-            <div class="row">
-                <div class="col-md-6" style="background-color: #B18904; box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-                    <p>
-                        Consectetur art party Tonx culpa semiotics. Pinterest
-        assumenda minim organic quis.
-                    </p>
-                </div>
-                <div class="col-md-6" style="background-color: #B18904; box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-                    <p>
-                         s
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6" style="background-color: #B18904; box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-                    <p>
-                        quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.
-                    </p>
-                </div>
-                <div class="col-md-6" style="background-color: #B18904; box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="col-xs-6 col-sm-3"><img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
+    height: 172px;
+    margin-top: 41px;">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p></div>
+  <div class="col-xs-6 col-sm-3"><img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
+    height: 172px;
+    margin-top: 41px;">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p></div>
+      <div class="col-xs-6 col-sm-3"><img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
+    height: 172px;
+    margin-top: 41px;">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p></div>
+      <div class="col-xs-6 col-sm-3"><img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png" style="width: 172px;
+    height: 172px;
+    margin-top: 41px;">
+            <div>
+                <p>红米</p>
+                <p>195</p>
+            </div></div>
+</div>
+</div>
+
 </div>
 </body>
 </html>
@@ -91,6 +79,38 @@
 
             },
             error: function (e) {
+                alert("错误！！");
+            }
+        });
+$.ajax({
+            url:"/list_goods",
+            type:"post",
+
+
+            dataType: "json",
+             success:function(data){ //后端返回的json数据（此处data为json对象）
+                if(data.mess=='ok')
+                {
+                    for(var i=0;i<data.data.length;i++)
+                    {
+                        var s= ' <div class="col-xs-6 col-sm-3"><img src="/' +data.data[i].goods_photo+
+                       '"  style="width: 172px;height: 172px;margin-top: 41px;"> ' +
+                       '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p></div>'
+                         document.getElementById("list_goods").innerHTML += s;
+                    }
+
+
+
+                    document.getElementById("list_goods").innerHTML += s;
+
+                }
+              else
+                {
+                    alert(data.mess)
+                }
+
+          },
+            error:function(e){
                 alert("错误！！");
             }
         });
