--- a/templates/html.html
+++ b/templates/html.html
@@ -55,18 +55,18 @@ div.youhui{width: 234px;height: 12px;line-height: 12px;margin:15px 0;font-size: 
             <div class="sub_mingxing">
                 <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png">
             </div>
-            <div class="pinpai"><a href="">å°ç±³MIX</a></div>
-            <div class="youhui">5æœˆ9æ—¥-21æ—¥äº«èŠ±å‘—12æœŸåˆ†æœŸå…æ¯</div>
-            <div class="jiage">ï¿¥ 3499å…ƒèµ·</div>
+            <div class="pinpai"><a href="">Ğ¡Ã×MIX</a></div>
+            <div class="youhui">5ÔÂ9ÈÕ-21ÈÕÏí»¨ßÂ12ÆÚ·ÖÆÚÃâÏ¢</div>
+            <div class="jiage">£¤ 3499ÔªÆğ</div>
         </div>
 
         <div class="col-xs-6 col-sm-3">
             <div class="sub_mingxing">
                 <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png">
             </div>
-            <div class="pinpai"><a href="">å°ç±³5s</a></div>
-            <div class="youhui">5æœˆ9æ—¥-10æ—¥ï¼Œä¸‹å•ç«‹å‡200å…ƒ</div>
-            <div class="jiage">ï¿¥ 1999å…ƒ</div>
+            <div class="pinpai"><a href="">Ğ¡Ã×5s</a></div>
+            <div class="youhui">5ÔÂ9ÈÕ-10ÈÕ£¬ÏÂµ¥Á¢¼õ200Ôª</div>
+            <div class="jiage">£¤ 1999Ôª</div>
         </div>
 
         <!-- Add the extra clearfix for only the required viewport -->
@@ -75,40 +75,58 @@ div.youhui{width: 234px;height: 12px;line-height: 12px;margin:15px 0;font-size: 
             <div class="sub_mingxing">
                 <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png">
             </div>
-            <div class="pinpai"><a href="">å°ç±³ç”µè§†3s 55è‹±å¯¸</a></div>
-            <div class="youhui">5æœˆ9æ—¥ï¼Œä¸‹å•ç«‹å‡200å…ƒ</div>
-            <div class="jiage">3999å…ƒ</div>
+            <div class="pinpai"><a href="">Ğ¡Ã×µçÊÓ3s 55Ó¢´ç</a></div>
+            <div class="youhui">5ÔÂ9ÈÕ£¬ÏÂµ¥Á¢¼õ200Ôª</div>
+            <div class="jiage">3999Ôª</div>
         </div>
         <div class="col-xs-6 col-sm-3">
             <div class="sub_mingxing">
                 <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png">
             </div>
-            <div class="pinpai"><a href="">å°ç±³ç¬”è®°æœ¬</a></div>
-            <div class="youhui">æ›´è½»æ›´è–„ï¼Œåƒæ‚å¿—ä¸€æ ·éšèº«æºå¸¦</div>
-            <div class="jiage">3599å…ƒèµ·</div>
+            <div class="pinpai"><a href="">Ğ¡Ã×±Ê¼Ç±¾</a></div>
+            <div class="youhui">¸üÇá¸ü±¡£¬ÏñÔÓÖ¾Ò»ÑùËæÉíĞ¯´ø</div>
+            <div class="jiage">3599ÔªÆğ</div>
         </div>
         <div class="col-xs-6 col-sm-3">
             <div class="sub_mingxing">
                 <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png">
             </div>
-            <div class="pinpai"><a href="">å°ç±³ç¬”è®°æœ¬</a></div>
-            <div class="youhui">æ›´è½»æ›´è–„ï¼Œåƒæ‚å¿—ä¸€æ ·éšèº«æºå¸¦</div>
-            <div class="jiage">3599å…ƒèµ·</div>
+            <div class="pinpai"><a href="">Ğ¡Ã×±Ê¼Ç±¾</a></div>
+            <div class="youhui">¸üÇá¸ü±¡£¬ÏñÔÓÖ¾Ò»ÑùËæÉíĞ¯´ø</div>
+            <div class="jiage">3599ÔªÆğ</div>
         </div>
         <div class="col-xs-6 col-sm-3">
             <div class="sub_mingxing">
                 <img src="https://shopstatic.vivo.com.cn/vivoshop/commodity/82/1882_1534852360612hd_bi_750x750.png">
             </div>
-            <div class="pinpai"><a href="">å°ç±³</a></div>
-            <div class="youhui">æ›´å¤§</div>
-            <div class="jiage">3599å…ƒèµ·</div>
+            <div class="pinpai"><a href="">Ğ¡Ã×</a></div>
+            <div class="youhui">¸ü´ó</div>
+            <div class="jiage">3599ÔªÆğ</div>
         </div>
     </div>
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div class="row">
+  <div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+<div class="row">
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns are always 50% wide, on mobile and desktop -->
+<div class="row">
+  <div class="col-xs-8">.col-xs-6</div>
+  <div class="col-xs-6">.col-xs-6</div>
+</div>
 </div>
 
 <div id="user_mess">
-    <a class="btn btn-primary " href="/regrist" role="button" style="position: absolute;right: 55px;top: 5px;">æ³¨å†Œ</a>
-    <a class="btn btn-primary" href="/login" role="button" style="position: absolute;right: 155px;top: 5px;">ç™»å½•</a>
+    <a class="btn btn-primary " href="/regrist" role="button" style="position: absolute;right: 55px;top: 5px;">×¢²á</a>
+    <a class="btn btn-primary" href="/login" role="button" style="position: absolute;right: 155px;top: 5px;">µÇÂ¼</a>
 </div>
 </body>
 </html>
@@ -119,11 +137,11 @@ div.youhui{width: 234px;height: 12px;line-height: 12px;margin:15px 0;font-size: 
             contentType: "application/json; charset=utf-8",
 
             dataType: "json",
-            success: function (data) { //åç«¯è¿”å›çš„jsonæ•°æ®ï¼ˆæ­¤å¤„dataä¸ºjsonå¯¹è±¡ï¼‰
+            success: function (data) { //ºó¶Ë·µ»ØµÄjsonÊı¾İ£¨´Ë´¦dataÎªjson¶ÔÏó£©
                 if (data.mess == 'ok') {
-                    var m = '<a class="btn btn-primary" href="/login" role="button" style="position: absolute;right: 155px;top: 5px;"> æ¬¢è¿' +
-                        data.username +'</a>'+'<a class="btn btn-primary" href="/logout" role="button" style="position: absolute;right: 90px;top: 5px;">æ³¨é”€</a>'+
-                        '<a class="btn btn-primary" href="/shopping_cart" role="button" style="position: absolute;right: 10px;top: 5px;">è´­ç‰©è½¦</a>';
+                    var m = '<a class="btn btn-primary" href="/login" role="button" style="position: absolute;right: 155px;top: 5px;"> »¶Ó­' +
+                        data.username +'</a>'+'<a class="btn btn-primary" href="/logout" role="button" style="position: absolute;right: 90px;top: 5px;">×¢Ïú</a>'+
+                        '<a class="btn btn-primary" href="/shopping_cart" role="button" style="position: absolute;right: 10px;top: 5px;">¹ºÎï³µ</a>';
 
                      document.getElementById("user_mess").innerHTML = m;
                 }
@@ -133,7 +151,7 @@ div.youhui{width: 234px;height: 12px;line-height: 12px;margin:15px 0;font-size: 
 
             },
             error: function (e) {
-                alert("é”™è¯¯ï¼ï¼");
+                alert("´íÎó£¡£¡");
             }
         });
 $.ajax({
@@ -142,7 +160,7 @@ $.ajax({
 
 
             dataType: "json",
-             success:function(data){ //åç«¯è¿”å›çš„jsonæ•°æ®ï¼ˆæ­¤å¤„dataä¸ºjsonå¯¹è±¡ï¼‰
+             success:function(data){ //ºó¶Ë·µ»ØµÄjsonÊı¾İ£¨´Ë´¦dataÎªjson¶ÔÏó£©
                 if(data.mess=='ok')
                 {
                     for(var i=0;i<data.data.length;i++)
@@ -153,7 +171,7 @@ $.ajax({
                             '            <div class="pinpai"><a href="">'+data.data[i].goods_name+'</a></div>\n' +
                             '            <div class="youhui">'+data.data[i].goods_type+'</div>\n' +
                             '            <div class="jiage"  onclick="add()">'+data.data[i].goods_price+'' +'\'<a class="btn btn-primary "  id="' +data.data[i].goods_id+
-                            '" role="button" style="position: absolute;right: 15px; bottom: 0px;">è´­ä¹°</a>\''+
+                            '" role="button" style="position: absolute;right: 15px; bottom: 0px;">¹ºÂò</a>\''+
                             '</div>\n' +
                             '        </div>';
                          document.getElementById("list_goods").innerHTML += p;
@@ -169,7 +187,7 @@ $.ajax({
 
           },
             error:function(e){
-                alert("é”™è¯¯ï¼ï¼");
+                alert("´íÎó£¡£¡");
             }
         });
 function add() {
@@ -182,7 +200,7 @@ function add() {
         contentType: "application/json; charset=utf-8",
 
         dataType: "json",
-        success: function (data) { //åç«¯è¿”å›çš„jsonæ•°æ®ï¼ˆæ­¤å¤„dataä¸ºjsonå¯¹è±¡ï¼‰
+        success: function (data) { //ºó¶Ë·µ»ØµÄjsonÊı¾İ£¨´Ë´¦dataÎªjson¶ÔÏó£©
             if (data.mess == 'ok') {
 
 
@@ -199,7 +217,7 @@ function add() {
                             }
             else
             {
-                alert("è¯·ç™»å½•ï¼")
+                alert("ÇëµÇÂ¼£¡")
             }
                         }
                     });
