--- a/templates/home1.html
+++ b/templates/home1.html
@@ -104,6 +104,24 @@ div.youhui{width: 234px;height: 12px;line-height: 12px;margin:15px 0;font-size: 
             <div class="jiage">3599元起</div>
         </div>
     </div>
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div class="row">
+  <div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+<div class="row">
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns are always 50% wide, on mobile and desktop -->
+<div class="row">
+  <div class="col-xs-8">.col-xs-6</div>
+  <div class="col-xs-6">.col-xs-6</div>
+</div>
 </div>
 
 <div id="user_mess">
